--- a/Unroll2/Base.lproj/Main.storyboard
+++ b/Unroll2/Base.lproj/Main.storyboard
@@ -41,7 +41,7 @@
                     </toolbarItems>
                     <navigationItem key="navigationItem" title="Photo Notes Albums" id="QE4-93-jxo">
                         <barButtonItem key="backBarButtonItem" title="Albums" id="L1L-3p-ckW"/>
-                        <barButtonItem key="leftBarButtonItem" title="Settings" id="N5S-FN-s6G"/>
+                        <barButtonItem key="leftBarButtonItem" image="FatGear" id="N5S-FN-s6G"/>
                         <barButtonItem key="rightBarButtonItem" systemItem="add" id="Reb-LD-ifB">
                             <connections>
                                 <segue destination="EVj-cY-PaK" kind="presentation" identifier="AddAlbum" id="zVD-Ov-2nV"/>
@@ -71,10 +71,10 @@
                             <tableViewSection headerTitle="Album Name" id="TNv-4k-r0a">
                                 <cells>
                                     <tableViewCell contentMode="scaleToFill" selectionStyle="none" indentationWidth="10" id="6JI-tl-K7e">
-                                        <rect key="frame" x="0.0" y="55.5" width="375" height="44"/>
+                                        <rect key="frame" x="0.0" y="56" width="375" height="44"/>
                                         <autoresizingMask key="autoresizingMask"/>
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="6JI-tl-K7e" id="2ZV-kC-dIT">
-                                            <rect key="frame" x="0.0" y="0.0" width="375" height="43.5"/>
+                                            <rect key="frame" x="0.0" y="0.0" width="375" height="43"/>
                                             <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
                                                 <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" minimumFontSize="17" clearButtonMode="whileEditing" translatesAutoresizingMaskIntoConstraints="NO" id="fAh-XQ-A0r">
@@ -100,10 +100,10 @@
                             <tableViewSection headerTitle="Album Note" id="0YC-l6-llA">
                                 <cells>
                                     <tableViewCell contentMode="scaleToFill" selectionStyle="none" indentationWidth="10" rowHeight="200" id="euC-Be-1sv">
-                                        <rect key="frame" x="0.0" y="147.5" width="375" height="200"/>
+                                        <rect key="frame" x="0.0" y="149" width="375" height="200"/>
                                         <autoresizingMask key="autoresizingMask"/>
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="euC-Be-1sv" id="9bV-4I-mUg">
-                                            <rect key="frame" x="0.0" y="0.0" width="375" height="199.5"/>
+                                            <rect key="frame" x="0.0" y="0.0" width="375" height="199"/>
                                             <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
                                                 <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="tP9-kT-QRy">
@@ -120,34 +120,6 @@
                                                 <constraint firstAttribute="bottomMargin" secondItem="tP9-kT-QRy" secondAttribute="bottom" constant="-4" id="Yf4-HM-31C"/>
                                                 <constraint firstItem="tP9-kT-QRy" firstAttribute="trailing" secondItem="9bV-4I-mUg" secondAttribute="trailingMargin" constant="8" id="tCo-D2-YtO"/>
                                                 <constraint firstItem="tP9-kT-QRy" firstAttribute="leading" secondItem="9bV-4I-mUg" secondAttribute="leadingMargin" constant="-8" id="yQp-Jg-qzF"/>
-                                            </constraints>
-                                        </tableViewCellContentView>
-                                    </tableViewCell>
-                                </cells>
-                            </tableViewSection>
-                            <tableViewSection headerTitle="Album Thumbnail" id="GY9-S2-O8d">
-                                <cells>
-                                    <tableViewCell contentMode="scaleToFill" selectionStyle="none" indentationWidth="10" id="X8U-V9-mLG">
-                                        <rect key="frame" x="0.0" y="395.5" width="375" height="44"/>
-                                        <autoresizingMask key="autoresizingMask"/>
-                                        <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="X8U-V9-mLG" id="uyr-gs-6yL">
-                                            <rect key="frame" x="0.0" y="0.0" width="375" height="43.5"/>
-                                            <autoresizingMask key="autoresizingMask"/>
-                                            <subviews>
-                                                <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Hec-aF-qhw">
-                                                    <rect key="frame" x="0.0" y="4" width="375" height="35.5"/>
-                                                    <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
-                                                    <fontDescription key="fontDescription" type="system" pointSize="14"/>
-                                                    <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
-                                                </textView>
-                                            </subviews>
-                                            <constraints>
-                                                <constraint firstItem="Hec-aF-qhw" firstAttribute="top" secondItem="uyr-gs-6yL" secondAttribute="topMargin" constant="-4" id="GTs-H4-YKC"/>
-                                                <constraint firstAttribute="bottomMargin" secondItem="Hec-aF-qhw" secondAttribute="bottom" constant="-4" id="NMl-1g-bU2"/>
-                                                <constraint firstAttribute="centerX" secondItem="Hec-aF-qhw" secondAttribute="centerX" id="fCG-SN-TMC"/>
-                                                <constraint firstItem="Hec-aF-qhw" firstAttribute="leading" secondItem="uyr-gs-6yL" secondAttribute="leadingMargin" constant="-8" id="fZW-gM-Brh"/>
-                                                <constraint firstItem="Hec-aF-qhw" firstAttribute="trailing" secondItem="uyr-gs-6yL" secondAttribute="trailingMargin" constant="8" id="l5U-lr-YUc"/>
-                                                <constraint firstAttribute="centerY" secondItem="Hec-aF-qhw" secondAttribute="centerY" id="lIm-y2-K8R"/>
                                             </constraints>
                                         </tableViewCellContentView>
                                     </tableViewCell>
@@ -292,7 +264,7 @@
         <scene sceneID="Aeb-Yn-XIE">
             <objects>
                 <collectionViewController id="uLg-8C-qq2" customClass="CJMGalleryViewController" sceneMemberID="viewController">
-                    <collectionView key="view" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" misplaced="YES" alwaysBounceVertical="YES" dataMode="prototypes" id="9nl-h9-yxM">
+                    <collectionView key="view" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" id="9nl-h9-yxM">
                         <rect key="frame" x="0.0" y="64" width="375" height="559"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <color key="backgroundColor" cocoaTouchSystemColor="groupTableViewBackgroundColor"/>
@@ -435,6 +407,7 @@
                     <navigationItem key="navigationItem" id="ySI-BV-izL"/>
                     <connections>
                         <outlet property="barButtonFavorite" destination="dVh-8w-BxO" id="Rte-at-o0Y"/>
+                        <outlet property="barButtonOptions" destination="7lk-hn-E42" id="5BT-N7-XtR"/>
                     </connections>
                 </pageViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="5N9-aI-gXV" userLabel="First Responder" sceneMemberID="firstResponder"/>
@@ -458,7 +431,7 @@
                 </tableViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="UQn-i9-gPd" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="3524" y="1012"/>
+            <point key="canvasLocation" x="3324" y="1012"/>
         </scene>
         <!--Full Image View Controller-->
         <scene sceneID="PdM-rG-10i">
@@ -778,7 +751,6 @@
         <!--Navigation Controller-->
         <scene sceneID="Fa9-Uw-fSI">
             <objects>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="eum-hx-FuB" userLabel="First Responder" sceneMemberID="firstResponder"/>
                 <navigationController storyboardIdentifier="PhotoGrabViewController" automaticallyAdjustsScrollViewInsets="NO" id="yea-hL-UUa" sceneMemberID="viewController">
                     <toolbarItems/>
                     <navigationBar key="navigationBar" contentMode="scaleToFill" translucent="NO" id="dVm-At-Hmg">
@@ -795,6 +767,7 @@
                         <segue destination="6po-Ut-l1R" kind="relationship" relationship="rootViewController" id="YbT-sb-TfV"/>
                     </connections>
                 </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="eum-hx-FuB" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="990" y="1012"/>
         </scene>
@@ -803,7 +776,7 @@
             <objects>
                 <navigationController storyboardIdentifier="AListPickerViewController" automaticallyAdjustsScrollViewInsets="NO" id="RJx-d3-Qfi" sceneMemberID="viewController">
                     <toolbarItems/>
-                    <navigationBar key="navigationBar" contentMode="scaleToFill" misplaced="YES" translucent="NO" id="2il-we-B30">
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" translucent="NO" id="2il-we-B30">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="44"/>
                         <autoresizingMask key="autoresizingMask"/>
                         <color key="tintColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
@@ -823,6 +796,7 @@
         </scene>
     </scenes>
     <resources>
+        <image name="FatGear" width="22" height="22"/>
         <image name="WhiteStarEmpty" width="44" height="44"/>
     </resources>
     <inferredMetricsTieBreakers>
