QuickNote access established for other classes.

--- a/Unroll2/Base.lproj/Main.storyboard
+++ b/Unroll2/Base.lproj/Main.storyboard
@@ -830,6 +830,6 @@
         <image name="WhiteStarEmpty" width="44" height="44"/>
     </resources>
     <inferredMetricsTieBreakers>
-        <segue reference="zVD-Ov-2nV"/>
+        <segue reference="a2e-sF-Y6k"/>
     </inferredMetricsTieBreakers>
 </document>
